# acs-registry

./: .env  .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml
acs_registry/: __init__.py
acs_registry/mongodb/: compose.yml  get_mongo_db.py  station_collection.py
acs_registry/protocols/: station_data_object.py  station_query_protocol.py  station_register_protocol.py
acs_registry/stub/: car.py  station.py
src/: __main__.py  car.py  gas_goblin.py  station.py
src/domain/: station.py
src/protocols/: station_query_protocol.py  station_register_protocol.py
src/stub/: car.py  station.py
src/things/: station_protocol.py
