[tool.poetry]
name = "acs-registry"
version = "0.1.0"
description = ""
authors = ["tobinio <Tobias.frischmann1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aca-protocols = { git = "https://github.com/Diplomarbeit-PGHFP-2024-2025/aca-protocols.git", rev = "b4314073756b82d09e6527d010c02a6593e7444d" }
python = ">=3.12,<3.13"
uagents = "^0.15.2"
uagents-ai-engine = "^0.5.0"
ruff = "^0.6.8"
python-dotenv = "^1.0.1"
pymongo = {extras = ["srv"], version = "^4.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
